trabajé sobre tecnologia.html

--- a/Tecnologia.html
+++ b/Tecnologia.html
@@ -9,9 +9,10 @@
     <title>360|Tecnologia</title>
     <link rel="icon" href="img/icon.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/4de09098c3.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="tecnologia.css">
 </head>
 <body>
@@ -24,14 +25,14 @@
                 <ul>
                     <li> 
                         <div class="busqueda">
-                            <input type="text" name="Buscar" placeholder="Buscar...."class="src" autocomplete="off">
+                            <input type="text" name="Buscar" placeholder="Buscar______________________&#xf002; "class="src" autocomplete="off">
                         </div>
                     </li>
                     <li> <a href="Deportes.html">Deportes </a> </li> 
                     <li> <a href="Sociedad.html">Sociedad </a> </li> 
                     <li> <a href="Arte.html">Arte </a> </li> 
                     <li> <a href="Recreacion.html">Recreacion </a> </li> 
-                    <li> <a href="Tecnologia.html">Tecnologia </a> </li>
+                    <li> <a href="Tecnologia.html"><span>Tecnologia</span></a></li>
                 </ul>
             </div>
         </nav>
@@ -40,9 +41,148 @@
         <!---------------- Encabezado---------------------------->
         <div class="logo_noticias">
             <a href="index.html"><img src="img/360logo.jpg" alt="logo_diario" width="170px" height="150px"></a>
-            <h1>NOTICIAS DESTACADAS</h1>
-            <span>Dólar: $81,55 compra | $88,25 venta</span>
+            <div class="subtitulo">
+                <a href="index.html"><h3>Inicio</a><span>Tecnología</span></h3>
+            </div>
         </div>
     </div>
+    <!-------------------Main - Noticias----------------------- -->
+    <main>
+        <section  class="noticias">
+            <h1>Así avanzan los planes piloto 5G en Colombia</h1>
+            <p>El país cuenta con 41 proyectos en cinco de sus ciudades, según el Ministerio de las TIC.<p>
+            <article class="noticia-tecnologia">
+                <div class="imagen">
+                    <img src="/img/tecnologia.jpg"alt="5G En Colombia">
+                </div>
+                <h4>Por: Tecnósfera <span>13 de diciembre 2020 , 11:00 p. m.</span></h4>
+                <p>
+                    En mayo pasado, el país dio sus primeros pasos para probar las redes de quinta generación, a través del plan piloto realizado en la Secretaría de Salud de Bogotá, operado por Movistar y Huawei, en donde se desplegaron el uso de cámaras termográficas, con el fin de monitorear la temperatura de las personas que transitan en ese lugar.
+                    A partir de ahí, Colombia ha desarrollado, hasta el momento, 41 proyectos en cinco ciudades del país: Bogotá, Cali, Medellín, Tolú y Barrancabermeja.
+                </p>
+                <h3>Temas relacionados</h3>
+                <div class="temas-relacionados">
+                    <h5>UBER <span>DIC 12</span></h5>
+                    <p><a href="#">Los hechos tecnológicos que pasaron en el país en el 2020</a></p>
+                    <h5>5G DIC 07<span>DIC 07</span></h5>
+                    <p><a href="#">Europa ya piensa en redes 6G y empieza proyecto</a></p>
+                    <h5>5G DIC 07<span>DIC 07</span></h5>
+                    <p><a href="#">Estas son las tecnologías que ya se están probando con 5G en Colombia</a></p>    
+                </div>
+                <p>
+                    Las redes 5G son reconocidas por una velocidad mucho más alta que la de su predecesora, al tiempo que cuentan con una menor latencia, que es el tiempo de respuesta entre las comunicaciones. Expertos describen que permite más cantidad de dispositivos conectados a internet, sin que afecte la calidad.
+
+                    “El 5G es como un tubo en donde se hace la transferencia de datos e información. Cada generación hace que ese tubo sea más grande, pero en comparación con la red 4G, que es la que usamos ahora y nos permite gran número de conexiones, la 5G es 20 veces más grande”, señala Ricardo Anaya, product manager de Qualcomm para América Latina.
+
+                    Esto puede permitirle al país soñar con un mayor soporte para masificar el uso de vehículos autónomos, telemedicina, la industria 4.0 y el desarrollo de ciudades inteligentes, entre otros.
+                </p>
+                <p>Por eso, el despliegue de planes piloto representa la primera parte del camino para que esta tecnología sea una realidad en un futuro en el territorio colombiano. <strong> El Ministerio de las TIC aseguró que los permisos otorgados van hasta junio del próximo año.</strong><br>
+
+                   Con los resultados obtenidos se generará un banco de pruebas, el cual, indica el Mintic, “permitirá obtener la información necesaria que facilite el diseño de estrategias y normas que garanticen la adecuada asignación, seguridad jurídica y de las inversiones para los próximos procesos de selección objetiva”.
+                </p>
+                    <div class="img">
+                        <img src="/img/tecnologia2.jpg" alt="tecnologia"><br>
+                        <span>El 5G permite un mayor soporte para masificar el uso de vehículos autónomos,<br> telemedicina, la industria 4.0 y el desarrollo de ciudades inteligentes.
+                            
+                            Foto: Cortesía Tigo
+                        </span>
+                    </div>
+                    <h3>Planes en ejecución</h3>
+                    <p>El punto de partida fue el plan liderado por Movistar en Bogotá, el cual ha sido probado en más de 400.000 personas, señaló Fabián Hernández, CEO de Telefónica en el país. <br>
+
+                        <strong>“El piloto nos permite entender cómo debe ser el despliegue de esta nueva infraestructura. Lo importante es entender todas las aplicaciones que puede llegar a ofrecer y sus diferentes soluciones, ya sea para una empresa, un puerto o un hospital”, indicó Hernández.</strong>
+                    </p>
+                    <p>Por otro lado, Tigo desplegó junto con Nokia a principios de diciembre otro proyecto en la Ruta N, en Medellín, en el cual se pudo realizar una prueba simultánea con siete casos de uso en un solo lugar.</p>
+                    <h2> <strong>"En comparación con la red 4G, que es la que usamos ahora y nos permite gran número de conexiones, la 5G es 20 veces más grande"</strong></h2>
+                    <p>Entre ellos la ultra banda ancha móvil, acceso fijo inalámbrico, carros a escala conectados a redes 5G, robots colaborativos para la industria 4.0, realidad virtual de 360°, iluminación inteligente y video analítica para la prevención de covid-19.
+                        <br>
+                        “Estos planes nos permiten desde el lado técnico mirar las capacidades tecnológicas para soportar una evolución de la red. Además, fortalece el ecosistema desarrollador e innovador del país para que empecemos a pensar qué otras cosas podemos hacer contando con el soporte de la red 5G”, indicó Marcelo Cataldo, presidente de Tigo. 
+                        <br>
+                        Claro también ha estado enfocada en explorar el 5G. Actualmente cuenta con pilotos en Bogotá, Medellín, Cali y Barrancabermeja, centrados en banda ancha mejorada, acceso fijo inalámbrico y aulas de educación virtual.
+                        <br>
+                        Durante su despliegue, señaló el operador, se han alcanzado, en el caso de Bogotá, velocidades de más de 1 gigabit por segundo, lo que puede permitir descargar un video de alta definición de hasta 950 MB en ocho segundos.
+                        <br>
+                        “Es el paso inicial para estructurar, probar, identificar e incentivar nuevas soluciones y usos de esta tecnología, adaptadas a nuestras necesidades y que permitan seguir construyendo el camino para que estemos a la vanguardia”, señaló Carlos Zenteno, presidente de Claro Colombia.
+                        <br>
+                        Pese a todo esto, para que Colombia cuente con un despliegue amplio de esta red falta tiempo. Hasta el momento, el Mintic no ha puesto una fecha para una posible subasta del espectro 5G.
+                        <br>
+                        Aun así, en octubre pasado, el alto consejero presidencial para la Transformación Digital, Víctor Muñoz, mencionó la posibilidad de que para finales del 2021 se pueda considerar realizar una subasta, para que estas redes estén en funcionamiento para finales de 2022 y principios de 2023.
+                    </p>
+            </article>
+        </section>
+    </main>
+
+    <div class="mas-noticias">
+        <h3>Descubre más noticias</h3>
+        <img src="/img/google.jpg" alt="google">
+        <p><a href="#">Los servicios de Google ya están de vuelta</a></p>
+        <h3>Descubre más noticias</h3>
+        <img src="/img/tutorial_tecnologia.jpg" alt="Tutorial_tecnología">
+        <p><a href="#">Claves para no caer en una estafa virtual en esta Navidad</a></p>
+        <h3>Descubre más noticias</h3>
+        <img src="/img/google2.jpg" alt="google">
+        <p><a href="#">YouTube, Gmail y otros servicios de Google sufren una caída mundial</a></p>
+    </div>
+    <div class="video">
+        <h3>Te puede Interesar</h3>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/cKeJNQACXbg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
+      <!---------------- Main, Publicidad----------------->
+      <div class="publicidad">
+        <div class="publicidad1">
+            <img src="/Videos/200.gif" alt="">
+        </div>
+        <div class="publicidad1">
+            <img src="/Videos/frapu-199.gif" alt="">
+        </div>
+        <div class="publicidad1">
+            <img src="/Videos/spotify.gif" alt="">
+        </div>
+        <div class="publicidad1">
+            <img src="/Videos/d6ddb5e3-efe4-43aa-a1f9-b5b52ab1ca9a.gif" alt="">
+        </div>
+        <div class="publicidad1">
+            <img src="/Videos/cocacolagiphy-5.gif" alt="">
+        </div>
+    </div>
+
+    <!------------ redes flotantes --------------->
+    <div class="sticky-container">
+        <ul class="sticky">
+            <li>
+                <a href="https://www.facebook.com/Noticias-de-Tecnolog%C3%ADa-45973153601/"><i class="fab fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://twitter.com/abc_tecnologia?lang=es"><i class="fab fa-twitter-square"></i></a>
+            </li>
+            <li>
+                <a href="https://www.google.com/search?q=noticias+importantes+de+tecnologia&oq=noticias+importantes+de+tecnologia&aqs=chrome..69i57j0i22i30l5.11391j0j4&sourceid=chrome&ie=UTF-8"><i class="fab fa-google"></i></a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/watch?v=yDcoUkI8JZc&feature=youtu.be"><i class="fab fa-youtube-square"></i></a>
+            </li>
+        </ul>
+    </div>
+    <!-- ---------------Footer----------- -->
+    <footer class="contenedor-footer">
+        <div class="logo">
+            <img src="/img/logo.png" alt="Diario Digita 360°">
+        </div>
+        <div class="contactos">
+            <h3>Contáctos</h3>
+            <p>Franco_cli_cli@hotmail.com</p>
+            <p>m.e.cantero.dev@gmail.com</p>
+            <p>aquirosmarin@gmail.com</p>
+            <p>lopezgonzalofran@gmail.com</p>
+            <p>linavilla.2@gmail.com</p>
+        </div>
+        <div class="redes">
+            <h3>Redes Sociales</h3>
+            <a href="https://facebook.com"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://youtube.com"><i class="fab fa-youtube"></i></a>
+            <a href="https://twitter.com"><i class="fab fa-twitter"></i></a>
+        </div>
+</footer>
 </body>
 </html>
