Modificación sobre el archivo 'recreacion.html' y adhesión del css correspondiente

--- a/Recreacion.html
+++ b/Recreacion.html
@@ -1,15 +1,141 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="keywords" content="Dario online, diario.">
-    <meta name="author" content="Rompiendo codigos">
-    <meta name="description" content="Somos el diario que brinda el mejor servicio">
-    <title>360|Recreacion</title>
-    <link rel="icon" href="img/icon.png">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="keywords" content="Dario online, diario.">
+        <meta name="author" content="Rompiendo codigos">
+        <meta name="description" content="Somos el diario que brinda el mejor servicio">
+        <title>360|Recreacion</title>
+        <link rel="icon" href="img/icon.png">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/4de09098c3.js" crossorigin="anonymous"></script>
+        <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="Recreacion.css">
+    </head>
+    <body>
+         <!---------------- Menú de navegación-------------------->
+    <header class="barra-navegacion">
+        <nav>
+            <div class="menu">
+                <input type="checkbox" id="botonmenu">
+                <a href="#"><i class="fas fa-bars"></i></a>
+                <ul>
+                    <li> 
+                        <div class="busqueda">
+                            <input type="text" name="Buscar" placeholder="Buscar_______________&#xf002; "class="src" autocomplete="off">
+                        </div>
+                    </li>
+                    <li> <a href="Deportes.html">Deportes </a> </li> 
+                    <li> <a href="Sociedad.html">Sociedad </a> </li> 
+                    <li> <a href="Arte.html">Arte </a> </li> 
+                    <li> <a href="Recreacion.html"><span>Recreacion</span> </a> </li> 
+                    <li> <a href="Tecnologia.html">Tecnologia</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <div>
+         <!---------------- Encabezado---------------------------->
+         <div class="logo_noticias">
+            <a href="index.html"><img src="img/360logo.jpg" alt="logo_diario" width="170px" height="150px"></a>
+            <div class="subtitulo">
+                <a href="index.html"><h3>Inicio</a><span>Recreación</span></h3>
+            </div>
+        </div>
+    </div>
+    <!-------------------Main - Noticias----------------------- -->
+    <div class="contenedor-principal">
+      <main>
+        <section  class="noticias">
+            <h1>Estas son nuestras propuestas recreativas para el fin de semana</h1>
+            <p class=subtitulo> Sabemos de <strong>la importancia y el valor que tiene la recreación</strong> para todos, y por eso vamos a darte ideas de cómo aprovechar este sabado y domingo de buen clima </p>
+            <article class="nota-recreacion">
+                <div class="imagen">
+                    <img src="Acá va la imagen"alt="Sacarle provecho al tiempo libre">
+                </div>
+                <h4>Por: López, Gonzalo <span>13 de diciembre 2020 , 10:00 p. m.</span></h4>
+                <p>
+                    <i id="definicion"><strong>"Recreación: actividad destinada al aprovechamiento del tiempo libre para el esparcimiento físico y mental."</strong></i>
+                     Esta definición nos deja claro una parte general de sus beneficios, la actividad recreativa tiene un gran impacto en el bienestar anímico, así como contribuye
+                     al desarrollo personal, creativo y social, dependiendo de la actividad. Son muchas las opciones que hay para <i id="definicion"><strong>recrear</strong></i>
+                     pero ¿cuáles son las mejores para este 19 y 20 de diciembre?
+                </p>
+                <h3 class="titulo-temas">Temas relacionados</h3>
+                <div class="temas-relacionados">
+                    <div class="tema1">
+                        <h5>TERCERA EDAD <span>DIC 12</span></h5>
+                        <a href="#">Actividades recreativas para adultos mayores</a>
+                    </div>
+                    <div class="tema2">
+                        <h5>COVID-19<span>DIC 04</span></h5>
+                        <a href="#">Recreación y protocolos para actividades al aire libre durante la pandemia</a>
+                    </div>
+                    <div class="tema3">
+                        <h5>POLÉMICA<span>DIC 09</span></h5>
+                        <a href="#">Deporte o recreación ¿Qué ventajas tiene una sobre la otra?</a>
+                    </div>
+                </div>
+    
+    </div>
+  
+    <!---------------- Main, Publicidad----------------->
+    <div class="publicidad">
+        <div class="publicidad1">
+            <img src="Videos/200.gif" alt="">
+        </div>
+        <div class="publicidad1">
+            <img src="Videos/frapu-199.gif" alt="">
+        </div>
+        <div class="publicidad1">
+            <img src="Videos/spotify.gif" alt="">
+        </div>
+        <div class="publicidad1">
+            <img src="Videos/d6ddb5e3-efe4-43aa-a1f9-b5b52ab1ca9a.gif" alt="">
+        </div>
+        <div class="publicidad1">
+            <img src="Videos/cocacolagiphy-5.gif" alt="">
+        </div>
+    </div>
+
+     <!------------ redes flotantes --------------->
+     <div class="sticky-container">
+        <ul class="sticky">
+            <li>
+                <a href="https://www.facebook.com/Noticias-de-Tecnolog%C3%ADa-45973153601/"><i class="fab fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://twitter.com/abc_tecnologia?lang=es"><i class="fab fa-twitter-square"></i></a>
+            </li>
+            <li>
+                <a href="https://www.google.com/search?q=actividades+recreativas+para+toda+la+familia&rlz=1C1CHBF_esAR910AR910&oq=propuestas+recreativas+para+todas+l&aqs=chrome.2.69i57j0i22i30l2.6243j0j4&sourceid=chrome&ie=UTF-8"><i class="fab fa-google"></i></a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/watch?v=hEoxKsxUSeU"><i class="fab fa-youtube-square"></i></a>
+            </li>
+        </ul>
+    </div>
+    <!-- ---------------Footer----------- -->
+    <footer class="contenedor-footer">
+        <div class="logo">
+            <img src="img/logo.png" alt="Diario Digita 360°">
+        </div>
+        <div class="contactos">
+            <h3>Contáctos</h3>
+            <p>Franco_cli_cli@hotmail.com</p>
+            <p>m.e.cantero.dev@gmail.com</p>
+            <p>aquirosmarin@gmail.com</p>
+            <p>lopezgonzalofran@gmail.com</p>
+            <p>linavilla.2@gmail.com</p>
+        </div>
+        <div class="redes">
+            <h3>Redes Sociales</h3>
+            <a href="https://facebook.com"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://youtube.com"><i class="fab fa-youtube"></i></a>
+            <a href="https://twitter.com"><i class="fab fa-twitter"></i></a>
+        </div>
+    </footer>
+</body> 
+</html>
