--- a/Tecnologia.html
+++ b/Tecnologia.html
@@ -54,7 +54,7 @@
                 <p class="subtitulo">El país cuenta con 41 proyectos en cinco de sus ciudades, según el Ministerio de las TIC.<p>
                 <article class="noticia-tecnologia">
                     <div class="imagen">
-                        <img src="/img/tecnologia.jpg"alt="5G En Colombia">
+                        <img src="img/tecnologia.jpg"alt="5G En Colombia">
                     </div>
                     <h4>Por: Tecnósfera <span>13 de diciembre 2020 , 11:00 p. m.</span></h4>
                     <p>
@@ -77,7 +77,7 @@
                         </div>
                     </div>
                     <div class="img segunda">
-                        <img src="/img/tecnologia2.jpg" alt="tecnologia"><br>
+                        <img src="img/tecnologia2.jpg" alt="tecnologia"><br>
                         <div class="pie-de-foto1">El 5G permite un mayor soporte para masificar el uso de vehículos autónomos, telemedicina, la industria 4.0 y el desarrollo de ciudades inteligentes.</div>
                         <div class="pie-de-foto2"> <strong>Foto: Cortesía Tigo</strong></div>
                     </div>
@@ -118,16 +118,16 @@
                 <h3>Descubre más noticias</h3>
                 <div class="mas-noticias">
                     <div class="noticia noticia1">
-                        <img src="/img/google.jpg" alt="google">
+                        <img src="img/google.jpg" alt="google">
                         <a href="#"><span>Los servicios de Google ya están de vuelta</span></a>
                     </div>
                     <div class="noticia noticia2">
-                        <img src="/img/tutorial_tecnologia.jpg" alt="Tutorial_tecnología">
+                        <img src="img/tutorial_tecnologia.jpg" alt="Tutorial_tecnología">
                         <a href="#"><span>Claves para no caer en una estafa virtual en esta Navidad</span></a>
                     </div>
                     
                     <div class="noticia noticia3">
-                        <img src="/img/google2.jpg" alt="google">
+                        <img src="img/google2.jpg" alt="google">
                          <a href="#"><span>YouTube, Gmail y otros servicios de Google sufren una caída mundial</span></a> 
                     </div>
                 </div>
@@ -147,10 +147,10 @@
                             <input class="boton-enviar" type="submit" value="Enviar">
                         </form>
                         <div class="publicidad-horizontal">
-                            <img src="/img/publicidad-horizontal2.jpg" alt="Summer-publicidad">
+                            <img src="img/publicidad-horizontal2.jpg" alt="Summer-publicidad">
                         </div>
                         <div class="publicidad-horizontal">
-                            <img src="/img/publicidad-horizontal.jpg" alt="Summer-publicidad">
+                            <img src="img/publicidad-horizontal.jpg" alt="Summer-publicidad">
                         </div>
                      </div>  
             </div>
@@ -163,19 +163,19 @@
       <!---------------- Main, Publicidad----------------->
       <div class="publicidad">
         <div class="publicidad1">
-            <img src="/Videos/200.gif" alt="">
+            <img src="Videos/200.gif" alt="">
         </div>
         <div class="publicidad1">
-            <img src="/Videos/frapu-199.gif" alt="">
+            <img src="Videos/frapu-199.gif" alt="">
         </div>
         <div class="publicidad1">
-            <img src="/Videos/spotify.gif" alt="">
+            <img src="Videos/spotify.gif" alt="">
         </div>
         <div class="publicidad1">
-            <img src="/Videos/d6ddb5e3-efe4-43aa-a1f9-b5b52ab1ca9a.gif" alt="">
+            <img src="Videos/d6ddb5e3-efe4-43aa-a1f9-b5b52ab1ca9a.gif" alt="">
         </div>
         <div class="publicidad1">
-            <img src="/Videos/cocacolagiphy-5.gif" alt="">
+            <img src="Videos/cocacolagiphy-5.gif" alt="">
         </div>
     </div>
 
@@ -199,7 +199,7 @@
     <!-- ---------------Footer----------- -->
     <footer class="contenedor-footer">
         <div class="logo">
-            <img src="/img/logo.png" alt="Diario Digita 360°">
+            <img src="img/logo.png" alt="Diario Digita 360°">
         </div>
         <div class="contactos">
             <h3>Contáctos</h3>
