--- a/Tecnologia.html
+++ b/Tecnologia.html
@@ -25,7 +25,10 @@
                 <ul>
                     <li> 
                         <div class="busqueda">
-                            <input type="text" name="Buscar" placeholder="Buscar______________________&#xf002; "class="src" autocomplete="off">
+                            <input type="text" name="Buscar" placeholder="Buscar..."class="src" autocomplete="off">
+                            <div class="lupa">
+                                <a href="#"><i class="fas fa-search"></i></a>
+                            </div>
                         </div>
                     </li>
                     <li> <a href="Deportes.html">Deportes </a> </li> 
