--- a/Deportes.html
+++ b/Deportes.html
@@ -55,7 +55,7 @@
                 <p class="subtitulo">La revista France Football, que entrega el Balón de Oro, armó el equipo de todos los tiempos y Diego y Leo están presentes, como no podía ser de otra manera. Mirá.<p>
                 <article class="noticia-tecnologia">
                     <div class="imagen">
-                        <img src="/img/Deportes1.jpg"alt="11ideales">
+                        <img src="/img/deportes.jpg"alt="11ideales">
                     </div>
                     <h4><span>France Football.</span></h4>
                     <p>
