aregle tecnología que se desconfiguro un poco

--- a/Tecnologia.html
+++ b/Tecnologia.html
@@ -79,8 +79,8 @@
                             <a href="#">Estas son las tecnologías que ya se están probando con 5G en Colombia</a>
                         </div>
                     </div>
-                    <div class="img segunda">
-                        <img src="img/tecnologia2.jpg" alt="tecnologia"><br>
+                    <div class="img segunda" >
+                        <img src="img/tecnologia2.jpg" alt="tecnologia" width="600px"><br>
                         <div class="pie-de-foto1">El 5G permite un mayor soporte para masificar el uso de vehículos autónomos, telemedicina, la industria 4.0 y el desarrollo de ciudades inteligentes.</div>
                         <div class="pie-de-foto2"> <strong>Foto: Cortesía Tigo</strong></div>
                     </div>
