--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!---------------- Menú de navegación-------------------->
     <header class="barra-navegacion">
         <nav>
-            <div class="menu">
+            <div class="menu" id="inicio">
                 <input type="checkbox" id="botonmenu">
                 <a href="#"><i class="fas fa-bars"></i></a>
                 <ul>
@@ -172,9 +172,14 @@
             <img src="Videos/cocacolagiphy-5.gif" alt="">
         </div>
     </div>
+    <!---------------------- bnt-flotante--------------------------- -->
+    <div class="btn-inicio">
+        <a href="#inicio"><img src="img/logo.png" alt="btn-inicio" width="120px"></a>
+    </div>
+    <!------------------------footer---------------------------------- -->
     <footer class="contenedor-footer">
             <div class="logo">
-                <img src="img/logo.png" alt="Diario Digita 360°">
+                <a href="#inicio"><img src="img/logo.png" alt="Diario Digita 360°"></a>
             </div>
             <div class="contactos">
                 <h3>Contáctos</h3>
