Inserte los wigets

--- a/index.html
+++ b/index.html
@@ -44,7 +44,12 @@
         <div class="logo_noticias">
             <a href="index.html"><img src="img/360logo.jpg" alt="logo_diario" width="170px" height="150px"></a>
             <h1>NOTICIAS DESTACADAS</h1>
-            <span>Dólar: $81,55 compra | $88,25 venta</span>
+            <div class="wiget">
+                <script src="https://www.dolar-colombia.com/widget.js?t=2&c=1"></script>
+            </div>
+            <div class="clima">
+                <div id="cont_dd9158a9806e6b9f02feca1e878bb01c"><script type="text/javascript" async src="https://www.tiempo.com/wid_loader/dd9158a9806e6b9f02feca1e878bb01c"></script></div>
+            </div>
         </div>
     </div>
      <!---------------- Main, sección de noticias----------------->
