4ta modificación a recreación

--- a/Recreacion.html
+++ b/Recreacion.html
@@ -19,7 +19,7 @@
          <!---------------- Menú de navegación-------------------->
     <header class="barra-navegacion">
         <nav>
-            <div class="menu">
+            <div class="menu" id="inicio">
                 <input type="checkbox" id="botonmenu">
                 <a href="#"><i class="fas fa-bars"></i></a>
                 <ul>
@@ -163,10 +163,10 @@
             <input class="boton-enviar" type="submit" value="Enviar">
         </form>
         <div class="publicidad-horizontal">
-            <img src="img/publicidad-horizontal2.jpg" alt="Summer-publicidad">
+            <img src="img/pepsi.jpg" alt="Summer-publicidad">
         </div>
         <div class="publicidad-horizontal">
-            <img src="img/publicidad-horizontal.jpg" alt="Summer-publicidad">
+            <img src="img/adermicina.jpg" alt="Summer-publicidad">
         </div>
      </div>  
 </main>
@@ -196,10 +196,10 @@
      <div class="sticky-container">
         <ul class="sticky">
             <li>
-                <a href="https://www.facebook.com/Noticias-de-Tecnolog%C3%ADa-45973153601/"><i class="fab fa-facebook"></i></a>
+                <a href="https://www.facebook.com/RecreacionyDeportes"><i class="fab fa-facebook"></i></a>
             </li>
             <li>
-                <a href="https://twitter.com/abc_tecnologia?lang=es"><i class="fab fa-twitter-square"></i></a>
+                <a href="https://twitter.com/ConElMazoDando/status/1337451407063080960"><i class="fab fa-twitter-square"></i></a>
             </li>
             <li>
                 <a href="https://www.google.com/search?q=actividades+recreativas+para+toda+la+familia&rlz=1C1CHBF_esAR910AR910&oq=propuestas+recreativas+para+todas+l&aqs=chrome.2.69i57j0i22i30l2.6243j0j4&sourceid=chrome&ie=UTF-8"><i class="fab fa-google"></i></a>
