--- a/index.html
+++ b/index.html
@@ -91,11 +91,13 @@
             </section>
             <section class="hijo2">
                 <article>
-                    <img src="img/foto_noticia_temporal.png" width="200px" alt="">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet nisi sapiente reiciendis, maiores, voluptas consequuntur quaerat ut, rem ex rerum fugit? Veniam, 
-                        ea iste beatae totam nulla aperiam distinctio molestias!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sit blanditiis dolores a fugit animi nostrum, provident 
-                        quo mollitia similique ex voluptate quae ipsa amet. Dolorum ex corporis similique illum.
+                    <img src="img/recreacion1.jpg" width="475px" alt="">
+                    <p>Con una actualidad tan desbordante en muchos aspectos de la vida, es muy normal el sentirnos estresados y superados
+                        por determinadas situaciones, muchas veces el estrés que nos genera la vida laboral, el presente sin precedentes ocasionado
+                        por la pandemia mundial y los malestares de nuestra vida diaria, pueden ser perjudiciales para nuestra salud física y, sobre todo,
+                        mental, ¡por eso en la siguiente nota hablaremos de la recreación y el tiempo libre! un posible escape que está al alcance de nuestras manos
+                        para salir de un mal momento y, ¿por qué no?, lograr un crecimiento personal <br>
+                        <Strong>¡ACOMPAÑENOS A APRENDER A APROVECHAR NUESTROS MOMENTOS LIBRES!</Strong>
                     </p><br>
                     <a href="Recreacion.html" target="_blanck"  class="boton"><button">Ver más</button></a>
                 </article>
